public features added in frontend

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,23 @@
+@import url('https://fonts.googleapis.com/css2?family=Amiri:ital,wght@0,400;0,700;1,400;1,700&family=Hind+Siliguri:wght@300;400;500;600;700&display=swap');
+
+@font-face {
+  font-family: 'Hind Siliguri';
+  src: url('/font/Hind_Siliguri/HindSiliguri-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Amiri';
+  src: url('/font/Amiri/Amiri-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+.bangla { font-family: 'Hind Siliguri', Arial, sans-serif; }
+.arabic { font-family: 'Amiri', Arial, sans-serif; }
+.english { font-family: Arial, sans-serif; }
 @import "tailwindcss";
 @import "tw-animate-css";
 
